--- a/public/index.html
+++ b/public/index.html
@@ -166,6 +166,7 @@
     <footer>
         <marquee behavior="" direction="">Copyright issued 2020 by SRAVAN KUMAR M.</marquee>
     </footer>
+    <div id="div"></div>
     <script src="../app/js/jquery.js"></script>
     <script src="../app/js/validate.js"></script>
 </body>
